--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -3,6 +3,7 @@ $link: #4cb1f7;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 $warning: #ffc700;
+$danger: #f40026;
 
 // Update some of Bulma's component variables
 $body-background-color: #4cb1f7;
